# finance-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: main.ipynb
src/: analysis.py  clean.py  ingest.py  viz.py
src/finance_tracker/: cli.py  io.py
src/finance_tracker/ingest/: README.md  csv_ingest.py  pdf_base.py  pdf_rules.py
src/finance_tracker/transform/: README.md  categorize.py  consolidate.py  normalize.py
src/finance_tracker/viz/: README.md  monthly.py  networth.py  spending.py
tests/: test_ingest.py
