[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "matplotlib",
  "pdfplumber",
  "typer",
  "rich",
]

[project.scripts]
finance = "finance_tracker.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]